modified modules, freyja subworkflow, main workflow and config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -124,7 +124,7 @@ process {
     }
 
     withName: 'BCFTOOLS_MPILEUP' {
-        ext.args = '--max-depth 10000 --min-BQ 20 '
+        ext.args = '--max-depth 10000 --min-BQ 20'
         ext.args2 = '--ploidy 1 --keep-alts --keep-masked-ref -mv'
         ext.args3 = "--include 'INFO/DP>=10'"
         ext.prefix = { "${meta.id}.orig" }
@@ -133,6 +133,35 @@ process {
             mode: params.publish_dir_mode,
             pattern: '*.mpileup',
             enabled: params.save_mpileup
+        ]
+    }
+
+    withName: 'FREYJA_VARIANTS' {
+        publishDir = [
+            path: { "${params.outdir}/variants/freyja/variants" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{tsv,csv}"
+        ]
+    }
+    withName: 'FREYJA_DEMIX' {
+        publishDir = [
+            path: { "${params.outdir}/variants/freyja/demix" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{tsv,csv}"
+        ]
+    }
+    withName: 'FREYJA_BOOT' {
+        ext.args = '--boxplot PDF'
+        publishDir = [
+            path: { "${params.outdir}/variants/freyja/bootstrap" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{tsv,csv,pdf}"
+        ]
+    }
+    withName: 'FREYJA_UPDATE' {
+        publishDir = [
+            path: { "${params.outdir}/variants/freyja/" },
+            mode: params.publish_dir_mode,
         ]
     }
 
