--- a/nextflow.config
+++ b/nextflow.config
@@ -17,10 +17,13 @@ params {
     gff                        = null
     
     // Freyja barcodes and metadata
-    db_name                    = "Sarscov2"
     freyja_repeats             = 1000
-    freyja_barcodes            = "${projectDir}/assets/usher_barcodes.csv"
-    freyja_lineages_meta       = "${projectDir}/assets/lineages.json"
+    freyja_db_name             = 'freyja_db'
+    freyja_barcodes            = null
+    freyja_lineages_meta       = null
+
+    // Pangolin Variant estimation
+    pangolin                   = false
     
     // Kraken2db
     kraken2                    = false
