Input-check changed to reflect multiple datatypes and platforms, moved minimap_align to local, re-wrote workflow to account for long reads, added fastp parameters for long read

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,38 +18,57 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: 'SAMPLESHEET_CHECK' {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
+	withName: 'FASTQC_RAW_SHORT' {
+        ext.args = '--quiet'
+		publishDir = [
+            path: { "${params.outdir}/fastqc_raw_short" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
-	withName: 'FASTQC_RAW' {
+    withName: 'FASTQC_RAW_LONG' {
         ext.args = '--quiet'
 		publishDir = [
-            path: { "${params.outdir}/fastqc_raw" },
+            path: { "${params.outdir}/fastqc_raw_long" },
             mode: params.publish_dir_mode,
         ]
     }
 	
-	withName: 'FASTP' {
+	withName: 'FASTP_SHORT' {
         ext.args = [
             "-q 15",
             "--cut_front",
             "--cut_tail",
             "--cut_mean_quality 20",
-            "--length_required 30"
+            "--length_required 30",
         ].join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/QC_reads/fastp/${meta.id}" },
+                path: { "${params.outdir}/QC_reads/fastp_short/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{html,json}"
             ],
             [
-                path: { "${params.outdir}/QC_reads/fastp/${meta.id}" },
+                path: { "${params.outdir}/QC_reads/fastp_short/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: "*.fastq.gz"
+            ]
+        ]
+    }
+
+    withName: 'FASTP_LONG' {
+        ext.args = [
+            "-q 10",
+            "-l 200",
+        ].join(' ').trim()
+        publishDir = [
+            [
+                path: { "${params.outdir}/QC_reads/fastp_long/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: "*.{html,json}"
+            ],
+            [
+                path: { "${params.outdir}/QC_reads/fastp_long/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fastq.gz"
             ]
@@ -65,7 +84,6 @@ process {
     }
 
     withName: 'MINIMAP2_ALIGN' {
-        ext.args = "-x sr"
         publishDir = [
             path: "${params.outdir}/minimap2",
             mode: "copy",
