added samtools faidx module

--- a/conf/test.config
+++ b/conf/test.config
@@ -26,6 +26,7 @@ params {
 
     // Genome references
     fasta       = "${projectDir}/assets/references/wuhan.fa"
+    fai         = "${projectDir}/assets/references/wuhan.fai"
     gff         = "${projectDir}/assets/references/wuhan.GFF3"
     bedfile     = "${projectDir}/assets/ARTICv4_1.bed"
 }
