changed freyja version from 1.13.2 -> 1.14.4, added samplesheet with nanopore samples(e.coli)

--- a/nextflow.config
+++ b/nextflow.config
@@ -145,6 +145,7 @@ profiles {
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
     sge	      { includeConfig 'conf/sge.config'       }
+    rosalind  { includeConfig 'conf/cdc.config'  }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
