--- a/conf/test.config
+++ b/conf/test.config
@@ -20,9 +20,7 @@ params {
     max_time   = 6.h
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = ''
+    input  = "${projectDir}/assets/samplesheet.csv"
 
     // Genome references
     fasta       = "${projectDir}/assets/references/wuhan.fa"
