BAM File as Input

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -99,16 +99,26 @@ process {
         ].join(' ').trim()
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
-            path: { "${params.outdir}/variants/minimap2/log" },
+            path: { "${params.outdir}/variants/ivar/log" },
             mode: params.publish_dir_mode,
             pattern: '*.log'
         ]
     }
 
+
+    withName: 'REHEADER_BAM' {
+        publishDir = [
+            path: { "${params.outdir}/samtools/" },
+            mode: params.publish_dir_mode,
+            pattern: "*.bam"
+        ]
+    }
+
+
     withName: 'SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.ivar_trim.sorted" }
         publishDir = [
-            path: { "${params.outdir}/variants/minimap2" },
+            path: { "${params.outdir}/variants/ivar" },
             mode: params.publish_dir_mode,
             pattern: "*.bam"
         ]
@@ -116,7 +126,7 @@ process {
 
     withName: 'SAMTOOLS_INDEX' {
         publishDir = [
-            path: { "${params.outdir}/variants/minimap2" },
+            path: { "${params.outdir}/variants/ivar" },
             mode: params.publish_dir_mode,
             pattern: "*.bai"
         ]
