Added BAM input parsing

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -83,11 +83,28 @@ process {
         ]
     }
 
+    withName: KRAKEN2_STD {
+        publishDir = [
+            path: { "${params.outdir}/kraken2_std" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+	ext.prefix = { "${meta.id}_std" }
+    }
+
     withName: 'MINIMAP2_ALIGN' {
         publishDir = [
             path: "${params.outdir}/minimap2",
             mode: "copy",
             pattern: "*.{bam,bai}"
+        ]
+    }
+
+    withName: 'QUALIMAP_BAMQC' {
+        publishDir = [
+            path: { "${params.outdir}/QC_reads/qualimap" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
     
@@ -99,26 +116,16 @@ process {
         ].join(' ').trim()
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
-            path: { "${params.outdir}/variants/ivar/log" },
+            path: { "${params.outdir}/variants/ivar/log/" },
             mode: params.publish_dir_mode,
             pattern: '*.log'
         ]
     }
 
-
-    withName: 'REHEADER_BAM' {
-        publishDir = [
-            path: { "${params.outdir}/samtools/" },
-            mode: params.publish_dir_mode,
-            pattern: "*.bam"
-        ]
-    }
-
-
     withName: 'SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.ivar_trim.sorted" }
         publishDir = [
-            path: { "${params.outdir}/variants/ivar" },
+            path: { "${params.outdir}/variants/minimap2" },
             mode: params.publish_dir_mode,
             pattern: "*.bam"
         ]
@@ -126,7 +133,7 @@ process {
 
     withName: 'SAMTOOLS_INDEX' {
         publishDir = [
-            path: { "${params.outdir}/variants/ivar" },
+            path: { "${params.outdir}/variants/minimap2" },
             mode: params.publish_dir_mode,
             pattern: "*.bai"
         ]
@@ -161,7 +168,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/variants/freyja/bootstrap" },
             mode: params.publish_dir_mode,
-            pattern: "*.{tsv,csv,pdf}"
+            pattern: "*.{tsv,csv,PDF}"
         ]
     }
     withName: 'FREYJA_UPDATE' {
