--- a/nextflow.config
+++ b/nextflow.config
@@ -15,12 +15,16 @@ params {
     // References
     fasta                      = null
     gff                        = null
+    bed                        = null
     
     // Freyja barcodes and metadata
     freyja_repeats             = 1000
     freyja_db_name             = 'freyja_db'
     freyja_barcodes            = null
     freyja_lineages_meta       = null
+
+    // Kraken2 database parameter
+    kraken_db_std              = "/scicomp/reference/kraken_std8/"
 
     // primer bed file
     bedfile		               = null
@@ -43,7 +47,7 @@ params {
 
     // MultiQC options
     multiqc_config             = null
-    multiqc_title              = 'AquaScope-SC2 MuliQC'
+    multiqc_title              = 'AquaScope-SC2 MultiQC'
     multiqc_logo               = null
     max_multiqc_email_size     = '25.MB'
     multiqc_methods_description = null
