added nanoplot for longread QC

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,15 +21,15 @@ process {
 	withName: 'FASTQC_RAW_SHORT' {
         ext.args = '--quiet'
 		publishDir = [
-            path: { "${params.outdir}/fastqc_raw_short" },
+            path: { "${params.outdir}/rawQC" },
             mode: params.publish_dir_mode,
         ]
     }
 
-    withName: 'FASTQC_RAW_LONG' {
-        ext.args = '--quiet'
+    withName: 'NANOPLOT_RAW_LONG' {
+        ext.args = '--maxlength 40000 --plots hex dot'
 		publishDir = [
-            path: { "${params.outdir}/fastqc_raw_long" },
+            path: { "${params.outdir}/rawQC" },
             mode: params.publish_dir_mode,
         ]
     }
@@ -44,12 +44,12 @@ process {
         ].join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/QC_reads/fastp_short/${meta.id}" },
+                path: { "${params.outdir}/fastp_short/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{html,json}"
             ],
             [
-                path: { "${params.outdir}/QC_reads/fastp_short/${meta.id}" },
+                path: { "${params.outdir}/fastp_short/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fastq.gz"
             ]
@@ -63,23 +63,31 @@ process {
         ].join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/QC_reads/fastp_long/${meta.id}" },
+                path: { "${params.outdir}/fastp_long/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{html,json}"
             ],
             [
-                path: { "${params.outdir}/QC_reads/fastp_long/${meta.id}" },
+                path: { "${params.outdir}/fastp_long/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fastq.gz"
             ]
         ]
     }
 
-    withName: 'FASTQC_TRIMMED' {
+    withName: 'FASTQC_SHORT_TRIMMED' {
         ext.args = '--quiet'
         publishDir = [
-            path: { "${params.outdir}/fastqc_trimmed" },
+            path: { "${params.outdir}/trimmedQC" },
             mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: 'NANOPLOT_LONG_TRIMMED' {
+        ext.args = '--maxlength 40000 --plots hex dot'
+		publishDir = [
+            path: { "${params.outdir}/trimmedQC" },
+            mode: params.publish_dir_mode,
         ]
     }
 
@@ -102,7 +110,7 @@ process {
 
     withName: 'QUALIMAP_BAMQC' {
         publishDir = [
-            path: { "${params.outdir}/QC_reads/qualimap" },
+            path: { "${params.outdir}/bamQC/qualimap" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -164,7 +172,6 @@ process {
         ]
     }
     withName: 'FREYJA_BOOT' {
-        ext.args = '--boxplot PDF'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/bootstrap" },
             mode: params.publish_dir_mode,
