Ivar trim now takes 2 bed files, one for longread and one for short

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,16 +21,15 @@ process {
 	withName: 'FASTQC_RAW_SHORT' {
         ext.args = '--quiet'
 		publishDir = [
-            path: { "${params.outdir}/rawQC" },
+            path: { "${params.outdir}/fastqc/raw" },
             mode: params.publish_dir_mode,
         ]
     }
 
     withName: 'NANOPLOT_RAW_LONG' {
-        ext.args = '--maxlength 40000 --plots hex dot'
-		publishDir = [
-            path: { "${params.outdir}/rawQC" },
-            mode: params.publish_dir_mode,
+        publishDir = [
+            path: { "${params.outdir}/nanoplot/raw/${meta.id}" },
+            mode: params.publish_dir_mode
         ]
     }
 	
@@ -58,8 +57,11 @@ process {
 
     withName: 'FASTP_LONG' {
         ext.args = [
-            "-q 10",
+            "-q 20",
             "-l 200",
+            "--cut_front",
+            "--cut_tail",
+            "--cut_mean_quality 20",
         ].join(' ').trim()
         publishDir = [
             [
@@ -78,16 +80,16 @@ process {
     withName: 'FASTQC_SHORT_TRIMMED' {
         ext.args = '--quiet'
         publishDir = [
-            path: { "${params.outdir}/trimmedQC" },
+            path: { "${params.outdir}/fastqc/trimmed" },
             mode: params.publish_dir_mode
         ]
     }
 
     withName: 'NANOPLOT_LONG_TRIMMED' {
-        ext.args = '--maxlength 40000 --plots hex dot'
-		publishDir = [
-            path: { "${params.outdir}/trimmedQC" },
+        publishDir = [
+            path: { "${params.outdir}/nanoplot/trimmed/${meta.id}" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -117,11 +119,7 @@ process {
     }
     
     withName: 'IVAR_TRIM' {
-        ext.args = [
-            '-m 30 -q 20',
-            params.ivar_trim_noprimer ? '' : '-e',
-            params.ivar_trim_offset   ? "-x ${params.ivar_trim_offset}" : ''
-        ].join(' ').trim()
+        ext.args = '-m 30 -q 20' 
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
             path: { "${params.outdir}/variants/ivar/log/" },
@@ -148,7 +146,7 @@ process {
     }
 
     withName: 'IVAR_VARIANTS' {
-        ext.args = '-t 0.25 -q 20 -m 10'
+        ext.args = '-t 0.03 -q 20 -m 10'
         ext.args2 = '--ignore-overlaps --count-orphans --no-BAQ --max-depth 0 --min-BQ 0'
         publishDir = [
             path: { "${params.outdir}/variants/ivar" },
@@ -158,6 +156,7 @@ process {
     }
 
     withName: 'FREYJA_VARIANTS' {
+        ext.args = '--minq 20'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/variants" },
             mode: params.publish_dir_mode,
@@ -165,6 +164,7 @@ process {
         ]
     }
     withName: 'FREYJA_DEMIX' {
+        ext.args = '--covcut 10 --confirmedonly'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/demix" },
             mode: params.publish_dir_mode,
@@ -172,10 +172,11 @@ process {
         ]
     }
     withName: 'FREYJA_BOOT' {
+        ext.args = '--boxplot pdf'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/bootstrap" },
             mode: params.publish_dir_mode,
-            pattern: "*.{tsv,csv,PDF}"
+            pattern: "*.{tsv,csv,pdf}"
         ]
     }
     withName: 'FREYJA_UPDATE' {
