--- a/nextflow.config
+++ b/nextflow.config
@@ -18,32 +18,21 @@ params {
     bed                        = null
     
     // Freyja barcodes and metadata
-    freyja_repeats             = 1000
+    freyja_repeats             = 10
     freyja_db_name             = 'freyja_db'
     freyja_barcodes            = null
     freyja_lineages_meta       = null
 
     // Kraken2 database parameter
+    kraken                     = false
     kraken_db_std              = "/scicomp/reference/kraken_std8/"
 
     // primer bed file
-    bedfile		               = null
+    short_bedfile		       = null
+    long_bedfile               = null
 
-    // Illumina variant calling options
-    variant_caller             = null
-    consensus_caller           = 'bcftools'
-    min_mapped_reads           = 1000
-    ivar_trim_noprimer         = false
-    ivar_trim_offset           = null
-    filter_duplicates          = false
-    save_unaligned             = false
-    save_mpileup               = true
-    skip_ivar_trim             = false
-    skip_markduplicates        = true
-    skip_picard_metrics        = false
-    skip_consensus_plots       = false
-    skip_consensus             = false
-    skip_variants              = false
+    // Ivar variant calling options
+    save_mpileup               = false
 
     // MultiQC options
     multiqc_config             = null
@@ -185,7 +174,7 @@ manifest {
     homePage        = 'https://github.com/nf-core/aquascope'
     description     = 'Pipeline is for early detection of SC2 variants of concern via shotgun metagenomic sequencing of wastewater'
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=21.04.0'
+    nextflowVersion = '!>=23.04.02'
     version         = '1.0dev'
 }
 
