ivar and bamqc now takes single gff as input

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -146,8 +146,8 @@ process {
     }
 
     withName: 'IVAR_VARIANTS' {
-        ext.args = '-t 0.03 -q 20 -m 10'
-        ext.args2 = '--ignore-overlaps --count-orphans --no-BAQ --max-depth 0 --min-BQ 0'
+        ext.args = '-t 0.03 -q 20'
+        ext.args2 = '-aa -A -d 600000 -Q 20 -q 0 -B'
         publishDir = [
             path: { "${params.outdir}/variants/ivar" },
             mode: params.publish_dir_mode,
