ivar trim looks for tsv files instead of log files

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -122,9 +122,9 @@ process {
         ext.args = '-m 30 -q 20' 
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
-            path: { "${params.outdir}/variants/ivar/log/" },
+            path: { "${params.outdir}/variants/ivar/" },
             mode: params.publish_dir_mode,
-            pattern: '*.log'
+            pattern: '*.tsv'
         ]
     }
 
