added sars-cov-2 fasta and gff references as default run params

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,18 +13,18 @@ params {
     input                      = null
 
     // References
-    fasta                      = null
-    gff                        = null
+    fasta                      = "${projectDir}/assets/references/wuhan.fa"
+    gff                        = "${projectDir}/assets/references/wuhan.gff"
     
     // Freyja barcodes and metadata
-    freyja_repeats             = 1000
+    freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
     freyja_db_name             = 'freyja_db'
     freyja_barcodes            = null
     freyja_lineages_meta       = null
 
     // Kraken2 database parameter
     kraken                     = false
-    kraken_db_std              = "/scicomp/reference/kraken_std8/"
+    kraken_db_std              = null
 
     // Ivar variant calling options
     save_mpileup               = false
