changed version of freyja to 1.4.9

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -146,7 +146,7 @@ process {
     }
 
     withName: 'IVAR_VARIANTS' {
-        ext.args = '-t 0.03 -q 20'
+        ext.args = '-t 0.0 -q 20'
         ext.args2 = '-aa -A -d 600000 -Q 20 -q 0 -B'
         publishDir = [
             path: { "${params.outdir}/variants/ivar" },
@@ -172,7 +172,7 @@ process {
         ]
     }
     withName: 'FREYJA_BOOT' {
-        ext.args = '--boxplot pdf'
+        ext.args = '--boxplot pdf --depthcutoff 10'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/bootstrap" },
             mode: params.publish_dir_mode,
