--- a/nextflow.config
+++ b/nextflow.config
@@ -14,8 +14,9 @@ params {
 
     // References
     fasta                      = "${projectDir}/assets/references/wuhan.fa"
-    gff                        = "${projectDir}/assets/references/wuhan.gff"
-    
+    bed                        = "${projectDir}/assets/references/wuhan.bed"
+    gff				           = "${projectDir}/assets/references/wuhan.gff3"
+
     // Freyja barcodes and metadata
     freyja_repeats             = 1 //default, change it to at minimum 250 to run it faster
     freyja_db_name             = 'freyja_db'
