added additional params for fastp longreads

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -58,10 +58,11 @@ process {
     withName: 'FASTP_LONG' {
         ext.args = [
             "-q 20",
-            "-l 200",
-            "--cut_front",
+            "-t 10",
             "--cut_tail",
+            "--cut_front",
             "--cut_mean_quality 20",
+            "--length_required 200",
         ].join(' ').trim()
         publishDir = [
             [
@@ -146,7 +147,7 @@ process {
     }
 
     withName: 'IVAR_VARIANTS' {
-        ext.args = '-t 0.0 -q 20'
+        ext.args = '-t 0.25 -q 20'
         ext.args2 = '-aa -A -d 600000 -Q 20 -q 0 -B'
         publishDir = [
             path: { "${params.outdir}/variants/ivar" },
@@ -172,7 +173,7 @@ process {
         ]
     }
     withName: 'FREYJA_BOOT' {
-        ext.args = '--boxplot pdf --depthcutoff 10'
+        ext.args = '--boxplot pdf'
         publishDir = [
             path: { "${params.outdir}/variants/freyja/bootstrap" },
             mode: params.publish_dir_mode,
