outputting ivar_bam and mpileup

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,10 +35,9 @@ process {
 	
 	withName: 'FASTP_SHORT' {
         ext.args = [
-            "-q 15",
             "--cut_front",
-            "--cut_tail",
-            "--cut_mean_quality 20",
+            "-W 4",
+            "-M 15",
             "--length_required 30",
         ].join(' ').trim()
         publishDir = [
@@ -57,11 +56,10 @@ process {
 
     withName: 'FASTP_LONG' {
         ext.args = [
-            "-q 20",
-            "-t 10",
-            "--cut_tail",
             "--cut_front",
-            "--cut_mean_quality 20",
+            "--cut_tail",
+            "-W 4",
+            "-M 15",
             "--length_required 200",
         ].join(' ').trim()
         publishDir = [
@@ -120,12 +118,12 @@ process {
     }
     
     withName: 'IVAR_TRIM' {
-        ext.args = '-m 30 -q 20' 
+        ext.args = '-m 30' 
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
             path: { "${params.outdir}/variants/ivar/" },
             mode: params.publish_dir_mode,
-            pattern: '*.tsv'
+            pattern: '*.{tsv,bam}'
         ]
     }
 
@@ -147,7 +145,7 @@ process {
     }
 
     withName: 'IVAR_VARIANTS' {
-        ext.args = '-t 0.25 -q 20'
+        ext.args = '-t 0.01 -q 20'
         ext.args2 = '-aa -A -d 600000 -Q 20 -q 0 -B'
         publishDir = [
             path: { "${params.outdir}/variants/ivar" },
@@ -164,6 +162,7 @@ process {
             pattern: "*.{tsv,csv}"
         ]
     }
+
     withName: 'FREYJA_DEMIX' {
         ext.args = '--covcut 10 --confirmedonly'
         publishDir = [
