freyja bootstrap is removed

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -171,14 +171,14 @@ process {
             pattern: "*.{tsv,csv}"
         ]
     }
-    withName: 'FREYJA_BOOT' {
-        ext.args = '--boxplot pdf'
-        publishDir = [
-            path: { "${params.outdir}/variants/freyja/bootstrap" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{tsv,csv,pdf}"
-        ]
-    }
+//    withName: 'FREYJA_BOOT' {
+//        ext.args = '--boxplot pdf'
+//        publishDir = [
+//            path: { "${params.outdir}/variants/freyja/bootstrap" },
+//            mode: params.publish_dir_mode,
+//            pattern: "*.{tsv,csv,pdf}"
+//        ]
+//    }
     withName: 'FREYJA_UPDATE' {
         publishDir = [
             path: { "${params.outdir}/variants/freyja/" },
