--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ params {
     gff				           = "${projectDir}/assets/references/wuhan.gff3"
 
     // Freyja barcodes and metadata
-    freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
+    //freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
     freyja_db_name             = 'freyja_db'
     freyja_barcodes            = null
     freyja_lineages_meta       = null
