Modified nextflow config to reflect changed reference files

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,9 +13,9 @@ params {
     input                      = null
 
     // References
-    fasta                      = "${projectDir}/assets/references/wuhan.fa"
-    bed                        = "${projectDir}/assets/references/wuhan.bed"
-    gff				           = "${projectDir}/assets/references/wuhan.gff3"
+    fasta                      = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
+    bed                        = "${projectDir}/assets/references/SARS-CoV-2.reference.bed"
+    gff			               = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
 
     // Freyja barcodes and metadata
     //freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
@@ -27,12 +27,16 @@ params {
     kraken                     = false
     kraken_db_std              = null
 
+    // Samtools Ampliconclip parameters
+    save_cliprejects           = false
+    save_clipstats             = false
+
     // Ivar variant calling options
     save_mpileup               = true
 
     // MultiQC options
     multiqc_config             = null
-    multiqc_title              = 'AquaScope-SC2 MultiQC'
+    multiqc_title              = 'AquaScope-SARS-CoV-2 Quality Report'
     multiqc_logo               = null
     max_multiqc_email_size     = '25.MB'
     multiqc_methods_description = null
@@ -165,9 +169,9 @@ dag {
 }
 
 manifest {
-    name            = 'nf-core/aquascope'
+    name            = 'CDCGov-Aquascope'
     author          = 'Arun Boddapati, Hunter Seabolt, CDC SciComp'
-    homePage        = 'https://github.com/nf-core/aquascope'
+    homePage        = 'https://github.com/CDCgov/aquascope'
     description     = 'Pipeline is for early detection of SC2 variants of concern via shotgun metagenomic sequencing of wastewater'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.02'
