added samtools ampliconclip parameters and changed fastp_long parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,14 +21,14 @@ process {
 	withName: 'FASTQC_RAW_SHORT' {
         ext.args = '--quiet'
 		publishDir = [
-            path: { "${params.outdir}/fastqc/raw" },
+            path: { "${params.outdir}/FASTQC/Raw_Reads" },
             mode: params.publish_dir_mode,
         ]
     }
 
     withName: 'NANOPLOT_RAW_LONG' {
         publishDir = [
-            path: { "${params.outdir}/nanoplot/raw/${meta.id}" },
+            path: { "${params.outdir}/NANOPLOT/Raw_Reads/${meta.id}" },
             mode: params.publish_dir_mode
         ]
     }
@@ -42,12 +42,12 @@ process {
         ].join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/fastp_short/${meta.id}" },
+                path: { "${params.outdir}/FASTP/Short_Reads/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{html,json}"
             ],
             [
-                path: { "${params.outdir}/fastp_short/${meta.id}" },
+                path: { "${params.outdir}/FASTP/Short_Reads/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fastq.gz"
             ]
@@ -58,18 +58,20 @@ process {
         ext.args = [
             "--cut_front",
             "--cut_tail",
-            "-W 4",
-            "-M 15",
+            "-W 6",
+            "-e 15",
+            "-M 12",
+            "-y",
             "--length_required 200",
         ].join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/fastp_long/${meta.id}" },
+                path: { "${params.outdir}/FASTP/Long_Reads/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{html,json}"
             ],
             [
-                path: { "${params.outdir}/fastp_long/${meta.id}" },
+                path: { "${params.outdir}/FASTP/Long_Reads/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fastq.gz"
             ]
@@ -79,14 +81,14 @@ process {
     withName: 'FASTQC_SHORT_TRIMMED' {
         ext.args = '--quiet'
         publishDir = [
-            path: { "${params.outdir}/fastqc/trimmed" },
+            path: { "${params.outdir}/FASTQC/Trimmed_Reads" },
             mode: params.publish_dir_mode
         ]
     }
 
     withName: 'NANOPLOT_LONG_TRIMMED' {
         publishDir = [
-            path: { "${params.outdir}/nanoplot/trimmed/${meta.id}" },
+            path: { "${params.outdir}/NANOPLOT/Trimmed_Reads/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -101,17 +103,35 @@ process {
 	ext.prefix = { "${meta.id}_std" }
     }
 
-    withName: 'MINIMAP2_ALIGN' {
+    withName: 'MINIMAP2_ALIGN_SHORT' {
         publishDir = [
-            path: "${params.outdir}/minimap2",
+            path: "${params.outdir}/ALIGNMENT/",
             mode: "copy",
-            pattern: "*.{bam,bai}"
+            pattern: '*.{bam,bai}'
+        ]
+    }
+
+    withName: 'MINIMAP2_ALIGN_LONG' {
+        publishDir = [
+            path: "${params.outdir}/ALIGNMENT/",
+            mode: "copy",
+            pattern: '*.{bam,bai}'
         ]
     }
 
     withName: 'QUALIMAP_BAMQC' {
         publishDir = [
-            path: { "${params.outdir}/bamQC/qualimap" },
+            path: { "${params.outdir}/BAMQC/Qualimap" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'SAMTOOLS_AMPLICONCLIP' {
+        ext.args = '--hard-clip --both-ends --clipped --no-excluded --tolerance 10'
+        ext.prefix = { "${meta.id}.ampliconclip" }
+        publishDir = [
+            path: { "${params.outdir}/PRIMER_TRIMMING/AmpliconClip"},
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -119,18 +139,18 @@ process {
     
     withName: 'IVAR_TRIM' {
         ext.args = '-m 30' 
-        ext.prefix = { "${meta.id}.ivar_trim" }
+        ext.prefix = { "${meta.id}.IVAR_trim" }
         publishDir = [
-            path: { "${params.outdir}/variants/ivar/" },
+            path: { "${params.outdir}/PRIMER_TRIMMING/IVAR" },
             mode: params.publish_dir_mode,
             pattern: '*.{tsv,bam}'
         ]
     }
 
     withName: 'SAMTOOLS_SORT' {
-        ext.prefix = { "${meta.id}.ivar_trim.sorted" }
+        ext.prefix = { "${meta.id}.IVAR_trim.sorted" }
         publishDir = [
-            path: { "${params.outdir}/variants/minimap2" },
+            path: { "${params.outdir}/Variants/Minimap2" },
             mode: params.publish_dir_mode,
             pattern: "*.bam"
         ]
@@ -138,7 +158,7 @@ process {
 
     withName: 'SAMTOOLS_INDEX' {
         publishDir = [
-            path: { "${params.outdir}/variants/minimap2" },
+            path: { "${params.outdir}/Variants/Minimap2" },
             mode: params.publish_dir_mode,
             pattern: "*.bai"
         ]
@@ -148,7 +168,7 @@ process {
         ext.args = '-t 0.01 -q 20'
         ext.args2 = '-aa -A -d 600000 -Q 20 -q 0 -B'
         publishDir = [
-            path: { "${params.outdir}/variants/ivar" },
+            path: { "${params.outdir}/Variants/IVAR/VarCalls" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -157,7 +177,7 @@ process {
     withName: 'FREYJA_VARIANTS' {
         ext.args = '--minq 20'
         publishDir = [
-            path: { "${params.outdir}/variants/freyja/variants" },
+            path: { "${params.outdir}/Variants/FREYJA/VarCalls" },
             mode: params.publish_dir_mode,
             pattern: "*.{tsv,csv}"
         ]
@@ -166,22 +186,15 @@ process {
     withName: 'FREYJA_DEMIX' {
         ext.args = '--covcut 10 --confirmedonly'
         publishDir = [
-            path: { "${params.outdir}/variants/freyja/demix" },
+            path: { "${params.outdir}/Variants/FREYJA/Demix" },
             mode: params.publish_dir_mode,
             pattern: "*.{tsv,csv}"
         ]
     }
-//    withName: 'FREYJA_BOOT' {
-//        ext.args = '--boxplot pdf'
-//        publishDir = [
-//            path: { "${params.outdir}/variants/freyja/bootstrap" },
-//            mode: params.publish_dir_mode,
-//            pattern: "*.{tsv,csv,pdf}"
-//        ]
-//    }
+
     withName: 'FREYJA_UPDATE' {
         publishDir = [
-            path: { "${params.outdir}/variants/freyja/" },
+            path: { "${params.outdir}/Variants/FREYJA/" },
             mode: params.publish_dir_mode,
         ]
     }
