changed samtools_sort output prefix

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -148,7 +148,7 @@ process {
     }
 
     withName: 'SAMTOOLS_SORT' {
-        ext.prefix = { "${meta.id}.IVAR_trim.sorted" }
+        ext.prefix = { "${meta.id}.trimmed.sorted" }
         publishDir = [
             path: { "${params.outdir}/Variants/Minimap2" },
             mode: params.publish_dir_mode,
