added additional params to ivar trimming for illumina reads, -e and -s

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -138,12 +138,12 @@ process {
     }
     
     withName: 'IVAR_TRIM' {
-        ext.args = '-m 30' 
+        ext.args = '-m 30 -q 20 -e -s 4 ' 
         ext.prefix = { "${meta.id}.IVAR_trim" }
         publishDir = [
             path: { "${params.outdir}/PRIMER_TRIMMING/IVAR" },
             mode: params.publish_dir_mode,
-            pattern: '*.{tsv,bam}'
+            pattern: '*.{tsv,bam,log}'
         ]
     }
 
