--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     // References
     fasta                      = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
     gff			               = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
+    gff3                                = "${projectDir}/assets/references/SARS-CoV-2.reference.gff3"
 
     // Freyja barcodes and metadata
     //freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
