feat: added escape slash to freyja varints

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -175,7 +175,7 @@ process {
     }
 
     withName: 'FREYJA_VARIANTS' {
-        ext.args = '--minq 20'
+        ext.args = '--minq 20 --annot\"${params.gff3}\" --varthresh 0.01'
         publishDir = [
             path: { "${params.outdir}/Variants/FREYJA/VarCalls" },
             mode: params.publish_dir_mode,
