added SARS-COV2 as genome reference

--- a/conf/test.config
+++ b/conf/test.config
@@ -23,6 +23,7 @@ params {
     input  = "${projectDir}/assets/samplesheet.csv"
 
     // Genome references
-    fasta       = "${projectDir}/assets/references/wuhan.fa"
-    gff         = "${projectDir}/assets/references/wuhan.gff"
+    fasta       = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
+    gff         = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
+    gff3        = "${projectDir}/assests/references/SARS-CoV-2.reference.gff3"	
 }
