--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,8 @@ params {
     freyja_db_name             = 'freyja_db'
     freyja_barcodes            = null
     freyja_lineages_meta       = null
-
+    varthresh 		       = 0.01
+		
     // Kraken2 database parameter
     kraken                     = false
     kraken_db_std              = null
