--- a/nextflow.config
+++ b/nextflow.config
@@ -23,10 +23,6 @@
     freyja_barcodes            = null
     freyja_lineages_meta       = null
     varthresh	               = 0.01
-		
-    // Kraken2 database parameter
-    kraken                     = false
-    kraken_db_std              = null
 
     // Samtools Ampliconclip parameters
     save_cliprejects           = false
@@ -37,14 +33,14 @@
 
     // MultiQC options
     multiqc_config             = null
-    multiqc_title              = 'AquaScope-SARS-CoV-2 Quality Report'
+    multiqc_title              = 'Aquascope-SARS-CoV-2 Quality Report'
     multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
+    max_multiqc_email_size     = '30.MB'
     multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                     = './results'
-    tracedir                   = "${params.outdir}/pipeline_info"
+    outdir                     = './SARS-COV-2-Results'
+    tracedir                   = "${params.outdir}/Pipeline_Info"
     publish_dir_mode           = 'copy'
     email                      = null
     email_on_fail              = null
@@ -138,7 +134,6 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
-    sge	      { includeConfig 'conf/sge.config'       }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
