added samplesheet check to modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,20 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: 'SAMPLESHEET_CHECK' {
+		publishDir = [
+            path: { "${params.outdir}/pipeline_info/" },
+            mode: params.publish_dir_mode,
+        ]
+    }
+
+    withName: 'SAMTOOLS_FAIDX' {
+        publishDir = [
+            path: { "${params.outdir}/SAMTOOLS/"},
+            mode: params.publish_dir_mode,
+        ]
+    }
+
 	withName: 'FASTQC_RAW_SHORT' {
         ext.args = '--quiet'
 		publishDir = [
@@ -224,7 +238,7 @@ process {
 
     withName: 'CUSTOM_DUMPSOFTWAREVERSIONS' {
         publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
+            path: { "${params.outdir}/Pipeline_Info" },
             mode: params.publish_dir_mode,
             pattern: '*_versions.yml'
         ]
