feat: added freyja standalone subworkflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -236,9 +236,16 @@ process {
         ]
     }
 
+    withName: 'MULTIQC' {
+        publishDir = [
+            path: { "${params.outdir}/MULTIQC" },
+            mode: params.publish_dir_mode,
+        ]
+    }
+
     withName: 'CUSTOM_DUMPSOFTWAREVERSIONS' {
         publishDir = [
-            path: { "${params.outdir}/Pipeline_Info" },
+            path: { "${params.outdir}/pipeline_info" },
             mode: params.publish_dir_mode,
             pattern: '*_versions.yml'
         ]
