--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,8 @@
     // Input options
     input                      = null
 
+    workflow                   = 'aquascope'
+
     // References
     fasta                      = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
     gff			               = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
@@ -84,6 +86,9 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
+if (params.workflow == 'freyja_standalone')  {
+    includeConfig 'conf/freyja_standalone.config'
+}
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
@@ -167,11 +172,11 @@ dag {
 manifest {
     name            = 'CDCGov-Aquascope'
     author          = 'Arun Boddapati, Hunter Seabolt, CDC SciComp'
-    homePage        = 'https://github.com/CDCgov/aquascope'
+    homePage        = 'https://github.com/CDCgov/aquascope, https://cdcgov.github.io/aquascope/'
     description     = 'Pipeline is for early detection of SC2 variants of concern via shotgun metagenomic sequencing of wastewater'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.02'
-    version         = '1.0dev'
+    version         = '2.1.0'
 }
 
 // Function to ensure that resource requirements don't go beyond
