--- a/nextflow.config
+++ b/nextflow.config
@@ -137,8 +137,8 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test_illumina      { includeConfig 'conf/test_illumina.config'      }
+    test_ont		{ includeConfig 'conf/test_ont.config'          }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
