--- a/nextflow.config
+++ b/nextflow.config
@@ -139,6 +139,7 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
+    rosalind  { includeConfig 'conf/rosalind_cdc.config' }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
