--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run nf-core/aquascope -profile test,<docker/singularity>
+        nextflow run CDCgov/aquascope -profile test,<docker/singularity>
 
 ----------------------------------------------------------------------------------------
 */
