--- a/nextflow.config
+++ b/nextflow.config
@@ -137,9 +137,10 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-    rosalind  { includeConfig 'conf/rosalind_cdc.config' }
+    test                { includeConfig 'conf/test.config'      }
+    test_illumina       { includeConfig 'conf/test_illumina.config'      }
+    test_ont            { includeConfig 'conf/test_ont.config' }
+    rosalind            { includeConfig 'conf/rosalind_cdc.config' }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
