refactor: using entry points, not params

--- a/nextflow.config
+++ b/nextflow.config
@@ -97,13 +97,6 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-if (params.workflow == 'freyja_standalone')  {
-    includeConfig 'conf/freyja_standalone.config'
-} else if(params.workflow == 'aquascope_dcipher') {
-    includeConfig 'conf/aquascope_dcipher.config'
-}
-
-
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
     conda {
@@ -151,7 +144,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
-    rosalind        { includeConfig   'conf/rosalind_cdc.config'}
+    rosalind        { includeConfig   'conf/cdc_dev.config'}
     test_illumina   { includeConfig   'conf/test_illumina.config' }
     test_ont        { includeConfig   'conf/test_ont.config'}
 }
